CMakelists: set min version to v3.5, re-order commands

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,5 +1,7 @@
-cmake_minimum_required(VERSION 3.0)
-include_directories(.)
-add_definitions("-std=c++1y")
+cmake_minimum_required(VERSION 3.5)
 
 add_executable(example example.cpp)
+
+target_compile_features(example PRIVATE cxx_std_14)
+
+target_include_directories(example PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
